--- a/FrontEnd/android/settings.gradle
+++ b/FrontEnd/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'AwesomeProject'
+include ':react-native-fs'
+project(':react-native-fs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fs/android')
 include ':react-native-audio-recorder-player'
 project(':react-native-audio-recorder-player').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-audio-recorder-player/android')
 
