--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "btoa": "^1.2.1",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.3",
-    "react-native-audio-recorder-player": "^2.0.8"
+    "react-native-audio-recorder-player": "^2.0.8",
+    "react-native-fs": "^2.11.18"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
