--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeProject",
+  "name": "TEST",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,17 +7,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "btoa": "^1.2.1",
+    "@babel/runtime": "^7.1.2",
+    "d3-scale": "^2.1.2",
+    "d3-shape": "^1.2.2",
+    "native-base": "^2.8.1",
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.3",
+    "react-native": "^0.57.1",
     "react-native-audio-recorder-player": "^2.0.8",
-    "react-native-fs": "^2.11.18"
+    "react-native-easy-grid": "^0.2.0",
+    "react-native-fs": "^2.11.18",
+    "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-svg": "^7.1.2",
+    "react-native-svg-charts": "^5.2.0",
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.0",
+    "react-transform-hmr": "^1.0.4"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.1",
-    "react-test-renderer": "16.6.0-alpha.8af6728"
+    "react-test-renderer": "16.6.0-alpha.8af6728",
+    "schedule": "^0.4.0"
   },
   "jest": {
     "preset": "react-native"
