--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "babel-preset-react-native": "^2.1.0",
     "d3-scale": "^2.1.2",
     "d3-shape": "^1.2.2",
     "native-base": "^2.8.1",
